--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor='#908F8F'
-backgroundColor='#0e1117'
-secondaryBackgroundColor='#23242B'
-textColor='#fafafa'
+backgroundColor='#E8E8F0'
+secondaryBackgroundColor='#F8F8F8'
+textColor='#23242B'
 font='sans serif'
